--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Certificate 1 -->
                 <div class="card overflow-hidden">
-                    <div class="h-48 bg-light flex items-center justify-center certificate-image" onclick="expandImage('bangkit.jpg')">
-                        <img src="bangkit.jpg" alt="Bangkit Academy Certificate" class="w-full h-full object-cover">
+                    <div class="h-48 bg-light flex items-center justify-center certificate-image" onclick="expandImage('bangkit.png')">
+                        <img src="bangkit.png" alt="Bangkit Academy Certificate" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <h3 class="text-lg font-semibold mb-2 text-primary font-serif">Bangkit Academy 2024</h3>
@@ -737,8 +737,8 @@
                 
                 <!-- Certificate 5 -->
                 <div class="card overflow-hidden">
-                    <div class="h-48 bg-light flex items-center justify-center certificate-image" onclick="expandImage('smsib.jpg')">
-                        <img src="smsib.jpg" alt="Cloud Computing Certificate" class="w-full h-full object-cover">
+                    <div class="h-48 bg-light flex items-center justify-center certificate-image" onclick="expandImage('smsib.png')">
+                        <img src="smsib.png" alt="Cloud Computing Certificate" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <h3 class="text-lg font-semibold mb-2 text-primary font-serif">MSIB 7</h3>
